--- a/Javacodes_Examples/pom.xml
+++ b/Javacodes_Examples/pom.xml
@@ -15,7 +15,7 @@
     <dependency>
       <groupId>org.apache.hbase</groupId>
       <artifactId>hbase-client</artifactId>
-      <version>0.98.24-hadoop1</version>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
